<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Musicut</string>
    <string name="app_name_en">Musicut</string>
	<string name="artist">Artist</string>
	<string name="album">Album</string>
	<string name="duration">Duration</string>
	<string name="date_last_modified">Date last modified</string>
	<string name="dir">Directory</string>
	<string name="size">Size</string>
	<string name="sort">Sort</string>
	<string name="order">Order</string>
	<string name="title">Title</string>
	<string name="song_deleted">This song has been deleted.</string>
	<string name="undo_successfully">Undo successfully.</string>
	<string name="undo">undo</string>
	<string name="delete">delete</string>
	<string name="cut">cut</string>
	<string name="play">play</string>
	<string name="detail">detail</string>
	<string name="song_not_exists">Oops! This song doesn\'t exist somehow</string>
	<string name="app_upgraded">App upgraded!</string>
	<string name="permission_granted">Permission is granted</string>
	<string name="permission_not_granted">Permission is denied</string>
	<string name="notif_permission_not_granted">Sorry,without permission granted,this app can\'t run on your device.The permission is assured of not being abused.</string>
	<string name="warn_permisson_not_granted">Sorry,permission requset is refused.</string>
	<string name="tip_permission">Please grant the permission in 「Permission Manager」.</string>
	<string name="settings">settings</string>
	<string name="exit">exit</string>
	<string name="order_ascending">Ascending order</string>
	<string name="order_descending">Descending order</string>
	<string name="all">&lt;All&gt;</string>
	<string name="no_music">
		\n╔══╗       ♬ ♪ ♫
		\n║██║    ♫  ♫
		\n║ （（●）） ♪  
		\n╚══╝  
		\nLife cannot be with no music...
	</string>
	<string name="netease_cloud_music">Netease Cloud Music</string>
	<string name="kuwo_music">Kuwo Music</string>
	<string name="qq_music">QQ Music</string>
	<string name="download_content">Download Content</string>
	<string name="kgmusic">Kugou Music</string>
	<string name="cancel_filter">Cancel Filter</string>
	<string name="info_song">%1$s songs in total %2$s songs filtered</string>
	<string name="noti_press_again">Press again within 2 sec to exit.</string>
	<string name="tiki">TikiTiki</string>
    <string name="tiki_title">Free Music</string>
	<string name="search">search</string>
	<string name="about">About</string>
	<string name="about_tikitiki">
		All searched content in this application comes from 「tikitiki.cn」.
		Tikitiki is a website where you can download a specific 
		platform\'s  music（uncharged only） without installing its 
		client terminal.
	</string>
	<string name="visit">Visit</string>
	<string name="vendor_tencent">Tencent</string>
	<string name="vendor_netease">Netease</string>
	<string name="vendor_kugou">Kugou</string>
	<string name="hint">Please input keyword here</string>
	<string name="info_detail">
		File Path:%1$s
	  \nSong Name:%2$s
	  \nArtist:%3$s
	  \nAlbum:%4$s
	  \nDuration:%5$s(%6$smillis)
	  \nLast Modified:%7$s
	  \nSize:%8$s(%9$sbytes)
	   </string>
	<string name="copy">Copy</string>
	<string name="view_file">View File</string>
</resources>
