<merge
	xmlns:android="http://schemas.android.com/apk/res/android"
>
	<Space
		android:id="@+id/space"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_centerHorizontal="true"
	/>
	<TextView
		android:id="@+id/tv_artist"
		style="@style/FilterOptionTextViewAppearance"
		android:text="@string/artist"
	/>
	<Spinner
		android:id="@+id/sp_artist"
		style="@style/FilterSpinnerStyle"
		android:layout_toLeftOf="@id/space" 
		android:layout_below="@id/tv_artist"
	/>
	<TextView
		android:id="@+id/tv_album"
		android:layout_toRightOf="@id/space"
		style="@style/FilterOptionTextViewAppearance"
		android:text="@string/album"
	/>
	<Spinner
		android:id="@+id/sp_album"
		style="@style/FilterSpinnerStyle"
		android:layout_toRightOf="@id/space"
		android:layout_below="@id/tv_album"
	/>
	<TextView
		android:id="@+id/tv_duration"
		style="@style/FilterOptionTextViewAppearance"
		android:layout_below="@id/sp_artist"
		android:text="@string/duration"
	/>
	<Spinner
		android:id="@+id/sp_duration"
		style="@style/FilterSpinnerStyle"
		android:layout_toLeftOf="@id/space" 
		android:layout_below="@id/tv_duration"
	/>
	<TextView
		android:id="@+id/tv_size"
		android:layout_toRightOf="@id/space"
		style="@style/FilterOptionTextViewAppearance"
		android:layout_below="@id/sp_album"
		android:text="@string/size"
	/>
	<Spinner
		android:id="@+id/sp_size"
		style="@style/FilterSpinnerStyle"
		android:layout_toRightOf="@id/space"
		android:layout_below="@id/tv_size"
	/>
	<TextView
		android:id="@+id/tv_dir"
		style="@style/FilterOptionTextViewAppearance"
		android:layout_below="@id/sp_duration"
		android:text="@string/dir"
	/>
	<Spinner
		android:id="@+id/sp_dir"
		style="@style/FilterSpinnerStyle"
		android:layout_toLeftOf="@id/space" 
		android:layout_below="@id/tv_dir"
	/>

	<TextView
		android:id="@+id/tv_sort"
		android:layout_toRightOf="@id/space"
		android:layout_below="@id/sp_size"
		style="@style/FilterOptionTextViewAppearance"
		android:text="@string/sort"
	/>

	<Spinner
		android:id="@+id/sp_sort"
		style="@style/FilterSpinnerStyle"
		android:layout_toRightOf="@id/space"
		android:layout_below="@id/tv_sort"
	/>
	<View
		android:gravity="top"
		android:layout_marginTop="@dimen/margin_large"
		android:layout_below="@id/sp_sort"
		android:layout_width="fill_parent"
		android:background="?android:colorPrimary"
		android:layout_height="@dimen/margin_large"
	/>

</merge>
